Builds and runs basic Swing app FTW

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <!-- This property is used to specify the modules included in the (custom) JVM image. -->
         <!-- Reminder: javafx.web (the embedded browser component) is not included in this project by default due
         to GitHub template size restrictions. You can download the full SDK from https://openjfx.io -->
-        <jvm.modules>java.annotation,java.desktop,java.logging</jvm.modules>
+        <jvm.modules>java.desktop,java.logging</jvm.modules>
 
         <!-- Set the project to UTF-8, avoiding warnings in the build logs -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
