--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>flatlaf-intellij-themes</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>de.jangassen</groupId>
+            <artifactId>nsmenufx</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
